Implementando lógica de tratamiento de tokens en testutils y messageprocessor